Added create, update and delete endpoints.
Added validation dependency to pom.xml and added ErrorDto, UpdateDto, AppException, ObjectNotValidException, RestExceptionHandler, ObjectsValidator classes. Created create, update, delete endpoints to controller class and responsible methods to service class. Created test methods for those methods in MovieControllerTest and MovieServiceTest.